# cggml

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_debug.sh  build_release.sh  compile.sh  link.sh  link_debug.sh
common/include/: numerical_typedefs.h
geometry/include/: point_3.h
geometry/src/: CMakeLists.txt
geometry/tests/: CMakeLists.txt  geometry_tests.c  geometry_tests.h  point_2_test.c  point_3_test.c  segment_2_test.c
include/: nearest_neighbor.h  nearest_neighbor_exact.h  nearest_neighbor_exact_point_2d.h  nearest_neighbor_exact_point_3d.h  nearest_neighbor_point_2.h  nearest_neighbor_point_2d.h  nearest_neighbor_point_3.h  nearest_neighbor_point_3d.h  numerical_typedefs.h  point.h  point2d.h  point3d.h  point_2.h  point_2d.h  point_3.h  point_3d.h  segment_2.h  sort.h
peometry/include/: point_2.h
peometry/src/: CMakeLists.txt  point_2.c  point_3.c  segment_2.c
peometry/tests/: CMakeLists.txt  peometry_tests.c  peometry_tests.h  point_2_test.c  point_3_test.c  segment_2_test.c
psearch/include/: nearest_neighbor.h
psearch/src/: CMakeLists.txt  nearest_neighbor.c
psearch/tests/: CMakeLists.txt  nearest_neighbor_test.c  psearch_tests.c  psearch_tests.h
psort/bench/: CMakeLists.txt  psort_bench.c
psort/include/: sort.h  sort_common.h  sort_recursive.h
psort/src/: CMakeLists.txt  sort.c  sort_common.c  sort_recursive.c
psort/tests/: CMakeLists.txt  psort_tests.c  psort_tests.h  sort_test.c
search/src/: CMakeLists.txt
search/tests/: CMakeLists.txt  search_tests.c  search_tests.h
sort/: CMakeLists.txt
sort/bench/: CMakeLists.txt  sort_bench.c
sort/include/: sort_common.h
sort/src/: CMakeLists.txt  sort_common.c
sort/tests/: CMakeLists.txt
src/: CMakeLists.txt  main.c  nearest_neighbor.c  nearest_neighbor_exact.c  nearest_neighbor_exact_point_2d.c  nearest_neighbor_exact_point_3d.c  nearest_neighbor_point_2.c  nearest_neighbor_point_2d.c  nearest_neighbor_point_3.c  nearest_neighbor_point_3d.c  point.c  point2d.c  point3d.c  point_2.c  point_2d.c  point_3.c  point_3d.c  sort.c
test/: point_2d_test.c
tests/: CMakeLists.txt  main_test.c  main_test.h  point_2_test.c  point_2d_test.c  point_3_test.c  point_3d_test.c  segment_2_test.c  sort_test.c
